style.css file created and js file updated
style.css file is created and onclick function is added on all html buttons.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
 </head>
 <body id="body">
     <div class="container">
-        
+        <button class="btn" onclick="createAdd()">Create Adder</button>
+        <button class="btn" onclick="recursiveSrch()">Recursive Search </button>
+        <button class="btn" onclick="addPara()">Add Paragraph </button>
+        <button class="btn" onclick="addList()">Add ListItem</button>
+        <button class="btn" onclick="change()">Change Background</button>
+        <button class="btn" onclick="saveLocal()">Save to LocalStorage</button>
+        <!-- <button class="btn" onclick="getObjectFromLocalStorage()">Get Object From LocalStorage</button> -->
+        <button class="btn" onclick="saveLocal1()"> Save Object</button>
+
     </div>
 
-    <ul>
+    <div id="list">
+        <ul>
 
-    </ul>
+        </ul>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
